# opensim-client

./: .gitignore  Cargo.toml  remote_sim.toml.tpl
shader/: terrain_land.frag  terrain_land.vert
src/: camera.rs  config.rs  main.rs  networking.rs  render.rs  util.rs
src/cache/: mod.rs
src/data/: avatar.rs  client_avatar.rs  layer_land.png.txt  mod.rs  terrain.rs  texture.rs
src/networking/: mod.rs  region_connection.rs
src/render/: mod.rs
