[package]
name = "opensim-client"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]

[dependencies]
#imgui = "0.0.17"
addressable_queue = "0.2.0"
alga = "0.5.2"
chashmap = "2.2"
futures = "0.1.17"
futures-await = "0.1.0"
glium = "0.19.0"
lazy_static = "1.0.0"
#multiqueue = "0.3.2"
# use git version until https://github.com/leoschwarz/multiqueue/commit/998c381b05e287cd238cd0dccbcb7771c1442328 lands in crates.io version.
multiqueue = { git = "https://github.com/leoschwarz/multiqueue" }
nalgebra = { version = "0.14", features = ["serde-serialize"] }
opensim_networking = { git = "https://github.com/leoschwarz/opensim-networking" }
rmp-serde = "0.13.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.1"
tokio-core = "0.1.10"
toml = "0.4.5"
typenum = "1.9"
uuid = "0.6.0"